# ternary-lattice

./: AGENT.md  Cargo.toml  README.md  lib.rs
docs/: FUTURE-INTEGRATION.md
memory/: JOURNAL.md
src/: lib.rs
